--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,7 +27,31 @@ body {
 }
 
 
+/*
+ * Panel Fixes
+ ----------------/
+ */
 
+.panel {
+    background: rgba(0, 0, 0, 0.30);
+    color: #FFF;
+}
+
+
+/*
+ * Modal Fixes
+ */
+
+ .modal-content{
+    background: rgba(0, 0, 0, 0.30);
+    color: #FFF;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.30);
+ }
+
+ .modal-footer,
+ .modal-header {
+    border: none;
+ }
 /*
  * Footer Fixes
  --------------/
