added css3 transition effects

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,15 +22,20 @@ html {
 }
 
 
-.navbar-theme a {
+.navbar-theme a,
+.navbar-theme .dropdown-menu > li > a{
     color: #FFF !important;
+    transition: color .5s, background .5s;
+    -webkit-transition: color .5s, background .5s;
+    -moz-transition: color .5s, background .5s;
+    -o-transition: color: .5s, background .5s;
 }
 
 .navbar-theme a:hover,
 .navbar-theme a:focus,
 .navbar-theme .dropdown-menu > li > a:hover,
 .navbar-theme .dropdown-menu > li >a:focus {
-    background: rgba(255, 255, 255, 0.95);
+    background: rgba(255, 255, 255, 0.95) !important;
     color: #000 !important;
 }
 
