added read me files and fixed footer

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,6 +90,11 @@ html {
     text-align: center;
 }
 
+.footer .credits a img {
+    max-width: 64px;
+    width: 32px;
+}
+
 .footer .credits ul li {
     padding: 10px;
 }
