--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,3 +117,14 @@ html {
  .wrapper .login {
     margin-top: 100px;
  }
+
+
+.tr-active {
+    background: rgba(0,0,0,0.55);
+}
+
+.table-wrapper {
+    height: 300px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
